Added Talk Banana in projects

--- a/project.html
+++ b/project.html
@@ -37,9 +37,11 @@
     </div>
     <div class="container container-center">
         <section class="section">
-                <h1> Giftopedia </h1>
-                 <p> This is my final year project in BscIT. Giftopedia is a website which recommends you gifts for your loved ones. </p>
-                <a class="link link-secondary" href="/">View Source Code </a>
+                <h1> Talk Banana </h1>
+                 <p> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator
+                    to convert your text from English to Minions speak or Banana language. </p>
+                <a class="link link-primary" href="https://github.com/jagtapbhavesh/banana-speak">View Source Code </a>
+                <a class="link link-secondary" href="https://bananaminionstranslator.netlify.app/"> Translate </a>
         </section>
     </div>
     <div class="container container-center">
