--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Project | Bhavesh Jagtap</title>
     <link href="/style.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand">IAMDEVELOPER</div>
@@ -29,42 +31,49 @@
     </header>
     <div class="container container-center">
         <section class="section ow ">
-                <h1> Python blog project </h1>
-                <p> I am working on this project to learn flask which is a web application framework written in Python. and this website is a blog website where people can write blogs and post. 
-                </p>
-                <a class="link link-primary" href="https://github.com/jagtapbhavesh/python-blog-website-with-flask">View Source Code</a>
+            <h1> Talk Banana </h1>
+            <p> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
+                translator
+                to convert your text from English to Minions speak or Banana language. </p>
+            <a class="link link-primary" href="https://github.com/jagtapbhavesh/banana-speak">View Source Code</a>
+            <a class="link link-secondary" href="https://bananaminionstranslator.netlify.app/">Translate </a>
         </section>
     </div>
     <div class="container container-center">
         <section class="section">
-                <h1> Talk Banana </h1>
-                 <p> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator
-                    to convert your text from English to Minions speak or Banana language. </p>
-                <a class="link link-primary" href="https://github.com/jagtapbhavesh/banana-speak">View Source Code </a>
-                <a class="link link-secondary" href="https://bananaminionstranslator.netlify.app/"> Translate </a>
+            <h1> Python blog project </h1>
+            <p> I am working on this project to learn flask which is a web application framework written in Python. and
+                this website is a blog website where people can write blogs and post.
+            </p>
+            <a class="link link-primary" href="https://github.com/jagtapbhavesh/python-blog-website-with-flask">View
+                Source Code</a>
+
         </section>
     </div>
     <div class="container container-center">
         <section class="section ow ">
-                <h1> How well do you know me ? </h1>
-                <p> I love to play games and also love making them. This website is to see how well do you know me. I am pretty sure you will love to play.  
-                </p>
-                <a class="link link-primary" href="https://github.com/jagtapbhavesh/how-well-do-you-know-me">View Source Code</a>
-                <a class="link link-secondary" href="/">Play Game </a>
+            <h1> How well do you know me ? </h1>
+            <p> I love to play games and also love making them. This website is to see how well do you know me. I am
+                pretty sure you will love to play.
+            </p>
+            <a class="link link-primary" href="https://github.com/jagtapbhavesh/how-well-do-you-know-me">View Source
+                Code</a>
+            <a class="link link-secondary" href="/">Play Game </a>
         </section>
-    </div>    
+    </div>
     <br>
-        <footer class="footer">
-            <div class="footer-header">You can also follow me on</div>
-            <ul class="social-links list-non-bullet">
-                <li class="list-inline">
-                    <a class="link" href="http://instagram.com/jagtapbhaveshh"> Instagram </a></li>
-                <li class="list-inline">
-                    <a class="link" href="http://twitter.com/jagtapbhaveshh"> Twitter </a></li>
-                <li class="list-inline">
-                    <a class="link" href="http://github.com/jagtapbhavesh"> Github </a></li>
-            </ul>
-        </footer>
-    
+    <footer class="footer">
+        <div class="footer-header">You can also follow me on</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-inline">
+                <a class="link" href="http://instagram.com/jagtapbhaveshh"> Instagram </a></li>
+            <li class="list-inline">
+                <a class="link" href="http://twitter.com/jagtapbhaveshh"> Twitter </a></li>
+            <li class="list-inline">
+                <a class="link" href="http://github.com/jagtapbhavesh"> Github </a></li>
+        </ul>
+    </footer>
+
 </body>
+
 </html>
