--- a/project.html
+++ b/project.html
@@ -41,24 +41,21 @@
     </div>
     <div class="container container-center">
         <section class="section">
-            <h1> Python blog project </h1>
-            <p> I am working on this project to learn flask which is a web application framework written in Python. and
-                this website is a blog website where people can write blogs and post.
-            </p>
-            <a class="link link-primary" href="https://github.com/jagtapbhavesh/python-blog-website-with-flask">View
-                Source Code</a>
-
+            <h1> StopWatch </h1>
+            <p> Use Stopwatch for your daily activities. Challenge yourself to complete your work as soon as possible. </p>
+            <a class="link link-primary" href="https://github.com/jagtapbhavesh/JavaScript-Stopwatch">View Source Code</a>
+            <a class="link link-secondary" href="https://jagtapbhaveshstopwatch.netlify.app/">Play Game </a>
         </section>
     </div>
     <div class="container container-center">
         <section class="section ow ">
-            <h1> How well do you know me ? </h1>
-            <p> I love to play games and also love making them. This website is to see how well do you know me. I am
-                pretty sure you will love to play.
+            <h1> Rock-Paper-Scissor </h1>
+            <p> This is one of my favourite games of childhood and decided to make computer play with me using
+                Javascript. You can also play this game and defeat computer.
             </p>
-            <a class="link link-primary" href="https://github.com/jagtapbhavesh/how-well-do-you-know-me">View Source
+            <a class="link link-primary" href="https://github.com/jagtapbhavesh/Rock-Paper-Scissors">View Source
                 Code</a>
-            <a class="link link-secondary" href="/">Play Game </a>
+            <a class="link link-secondary" href="https://rock-paper-scissor-14.netlify.app/">Play Game </a>
         </section>
     </div>
     <br>
